--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
       }
     ],
     "no-use-before-define": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "camelcase": 0
   },
   "settings": {
     "import/resolver": {
